# my-python-template

./: pyproject.toml
tests/: test_my_python_template.py
