[tool.poetry]
name = "my-python-template"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
isort = "^5.9.3"
mypy = "^0.910"
black = "^21.7b0"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
